css: fix "nowrap" typing

--- a/content/media/css/luffy.listing.less
+++ b/content/media/css/luffy.listing.less
@@ -16,7 +16,7 @@
 
     li {
 	padding: 4px 1%;
-	white-space: no-wrap;
+	white-space: nowrap;
 	width: 48%;
 	float: left;
 	.inline-block;
